@@ -494,6 +494,9 @@ Release 2.6.0 - UNRELEASED
     HADOOP-11193. Fix uninitialized variables in NativeIO.c
     (Xiaoyu Yao via wheat9)
 
+    HADOOP-11176. KMSClientProvider authentication fails when both currentUgi
+    and loginUgi are a proxied user. (Arun Suresh via atm)
+
     BREAKDOWN OF HDFS-6134 AND HADOOP-10150 SUBTASKS AND RELATED JIRAS
   
       HADOOP-10734. Implement high-performance secure random number sources.
